--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "newway/payment",
-    "description": "Payment package for laravel",
+    "description": "Payment package for laravel 5",
     "license": "MIT",
     "authors": [
         {
@@ -10,11 +10,11 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*"
+        "illuminate/support": "5.*"
     },
     "autoload": {
-        "psr-0": {
-            "Newway\\Payment": "src/"
+        "psr-4": {
+          "Newway\\Payment\\": "src/"
         }
     },
     "minimum-stability": "stable"
